tests/ui/diagnostic-not-implemented-unaligned.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Unaligned` is not satisfied
  --> $DIR/diagnostic-not-implemented-unaligned.rs:17:23
   |
17 |     takes_unaligned::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `zerocopy::Unaligned` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_unaligned`
  --> $DIR/diagnostic-not-implemented-unaligned.rs:20:23
   |
20 | fn takes_unaligned<T: Unaligned>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_unaligned`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
